# OS3800-6502-emulator

./: 6502_lib.cc  6502_lib.h  6502_main.cc  CMakeLists.txt  README.md  TODO.md  asm_commands.cc  asm_commands.h  fib-docker.sh  hex_tests.cc  input_validation.h  makefile  mul-docker.sh
.github/workflows/: cmake-dev.yml  cmake.yml
assembler/: vasm6502_oldstyle
hexlib/: hex_lib.cc  hex_lib.h
program_loader/: 6502_loader.cc  6502_loader.h
src/: 6502_lib.cc  6502_main.cc  asm_commands.cc  asm_commands.h  input_validation.cc
src/hexlib/: hex_lib.h
src/program_loader/: 6502_loader.cc  6502_loader.h
src/tests/: cpu_core_test.cc  hex_tests.cc
test_assembly/: addresses_to_examine.addr  assemble.sh  branchtest.asm  branchtest.s19  fib.asm  fib.s19  test.asm  test.s19
test_assembly/fib/: addresses.addr  fib.asm  fib.s19
test_assembly/mul/: mul.asm  mul.s19
tests/: asm_commands_test.cc  cpu_core_test.cc  hex_tests.cc
